# ChessGame

./: .gitignore  CMakeLists.txt  README.md  kursovaya_final.sln
kursovaya_final/: CMakeCache.txt  Data.cpp  Data.h  Makefile  Moves.h  OnClickHandler.h  SquareFinders.cpp  Values.h  cmake_install.cmake  kursovaya_final.cbp  kursovaya_final.vcxproj  kursovaya_final.vcxproj.filters
kursovaya_final/Headers/Model/: Core.h  Data.h  Moves.h  MovesFinders.h  SquareFinders.h  TextureCoordinatesContainer.h  Values.h
kursovaya_final/Headers/View/: Button.hpp  Flag.h  Graphic.h
kursovaya_final/Headers/ViewModel/: OnClickHandler.h  OnClickHandling.h
kursovaya_final/Source/: Application.cpp
kursovaya_final/Source/Model/: Data.cpp  Moves.cpp  SquareFinders.cpp
kursovaya_final/Source/ViewModel/: OnClickHandler.cpp
kursovaya_final/resource/: Values.h
kursovaya_final/src/: Application.cpp
kursovaya_final/src/Model/: Core.cpp  Data.cpp  Moves.cpp  MovesFinders.cpp  SquareFinders.cpp
kursovaya_final/src/ViewModel/: OnClickHandler.cpp  OnClickHandling.cpp
